Fix command block check alignment
Fixes #212

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -227,7 +227,7 @@ pre.completed {
     ::before {
         content: "✓";
         font-family: 'Roboto', sans-serif;
-        line-height: 28px;
+        line-height: 22px;
         font-size: 18px;
         text-align: center;
         position: absolute;
